Kontinuirana integracija i isporaka/Lab 9/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab8-service-v2
spec:
  selector:
    app: lab8-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30002
  type: NodePort
